--- a/recoverable-data-structures.tex
+++ b/recoverable-data-structures.tex
@@ -11,6 +11,7 @@
 \usepackage{paralist}
 \usepackage{fullpage}
 \usepackage{xcolor}
+\usepackage{caption}
 %\usepackage{subcaption}
 \usepackage{smartref} % for referencing the line numbers
 
@@ -62,8 +63,8 @@
 
 \begin{document}
 
-	\input{linked-list}
-%	\input{elimination-stack}
+%	\input{linked-list}
+	\input{elimination-stack}
 %	\input{BST-robust}
 	
 
