--- a/elimination-stack.tex
+++ b/elimination-stack.tex
@@ -55,11 +55,13 @@ In order to avoid the above problem, we take an approach resembling the BST impl
 
 Using records instead of values results some more positive implications. First, there is no need to store the exchanger's state in it (by using 2 bits of it to mark the state), but we can rather have this info in the record. Second, if there is a \busy\ record in the exchanger, it contains the info of the two colliding records. Therefore, a third process, trying to also use the exchanger, can help the processes to complete the collision, and then can try and set the exchanger back to \emptyst, so it can use it again. In the original implementation, a process observaing a \busy\ exchanger, have to wait for the first process to read the value and release the exchanger. Therefore, if the first process crash after the collision, the exchanger will be hold by it forever. The helping mechanism avoids this scenario, making the exchange routine non-blocking.
 
-Notice that no exchange record with \emptyst\ state is ever created, except for the $default$ record. Therefore, reading \emptyst\ state is equivalent to the exchanger storing a pointer to $default$. Every process creates new record when accessing the exchanger, with a unique pointer. As long as a process fails to perform a successful \CAS, and thus fails to store its pointer in $slot$, it is allowed to try again. However, once a process performs a successful \CAS\ and stores $myop$ in $slot$, the only other \CAS\ it is allowed to do are in order to try and store $defualt$ in $slot$. Thus, if no crash occurs, $myop$ can be written exactly once to $slot$. It follows that a collision can occur between two processes exactly - once a \waiting\ record stored in $slot$, only a single \CAS\ can replace it with a \busy\ record. As the two records can not be written again to $slot$, no other process can collide with it.
+Notice that no exchange record with \emptyst\ state is ever created, except for the $default$ record. Therefore, reading \emptyst\ state is equivalent to the exchanger storing a pointer to $default$. Every process creates new record when accessing the exchanger, with a unique address. As long as a process fails to perform a successful \CAS, and thus fails to store its pointer in $slot$, it is allowed to try again. However, once a process performs a successful \CAS\ and stores $myop$ in $slot$, the only other \CAS\ it is allowed to do are in order to try and store $defualt$ in $slot$. Thus, if no crash occurs, $myop$ can be written exactly once to $slot$. It follows that a collision can occur between two processes exactly - once a \waiting\ record stored in $slot$, only a single \CAS\ can replace it with a \busy\ record. As the two records can not be written again to $slot$, no other process can collide with any of the records.
 
-Assume a process $p$ crash along the \exchange\ routine. Upon recovery, in the \recoverExchange\, it first read $myop = Announce[pid]$. There are two scenarios to consider.
-If process $p$ crash while $myop.state = \busy$, then $p$ crashed while or after an attempt to collide with $myop.partner$. Notice that there was a point in time where $partner$ was stored in $slot$ with state \waiting, as these are the only records that can be written to $myop.partner$. if $p$ did not succeed to collide with $partner$, then $myop$ is never written to $slot$. In particular, no other process can read $myop$, or write to any of its fields. Thus, the if in lines \ref{exchange-rec-busy-if} and \ref{exchange-rec-result-if} do not hold, and $p$ will return \fail.
+Assume process $p$ crash along the \exchange\ routine. Upon recovery, in the \recoverExchange\, it first read $myop = Announce[pid]$. There are two scenarios to consider.
+If process $p$ crash while $myop.state = \busy$, then $p$ crashed while or after an attempt to collide with $myop.partner$. Notice that there was a point in time where $partner$ was stored in $slot$ with state \waiting, as these are the only values that can be written to $myop.partner$. if $p$ did not succeed to collide with $partner$, then $myop$ is never written to $slot$. In particular, no other process can read $myop$, or write to any of its fields. Thus, the if in lines \ref{exchange-rec-busy-if} and \ref{exchange-rec-result-if} do not hold, and $p$ will return \fail.
 Otherwise, $p$ performed a successful \CAS, replacing $partner$ with $myop$. The only way to write a new value to $slot$ is by a \CAS\ with $myop$ as a parameter. This in turns, happens only after a process reads $myop$, and since its status is \busy, a \switchPair\ routine is invoked with $myop$ and $partner$. Thus, either $p$ will read $myop$ from $slot$, or that $myop$ was replaced, but a \switchPair\ routine completed the collision, and $myop.result$ is updated. In both cases, $p$ will return $myop.result$ as required.
+
+Otherwise, $p$ crash while $myop.state = \waiting$. Thus, $p$ may be after trying to perform a \CAS\ to replace $defalut$ with $myop$.
 
 
 \begin{figure*}[b]
