--- a/elimination-stack.tex
+++ b/elimination-stack.tex
@@ -53,15 +53,19 @@ Assume a process $p$ successfuly capture the exchanger by setting its status to 
 
 In order to avoid the above problem, we take an approach resembling the BST implementation. Instead of writing a value to the exchanger, processes will use an info record, containing the relevant information for the exchange. This way, processes use the exchanger in order to exchange info records (more precisely, pointers to such records), and not values. To overcome the problematic scenario described earlier, if a process $q$ observe the exchanger state is \waiting\ with some record $yourop$, it first update its own record $myop$ it is about to try and collide with $yourop$, and only then performs the \CAS. This way, if the collision is successful, the record $myop$ which now stored in the exchanger implies which two records collide. Also, the fact that different processes uses different records guarantee that at most one record can collide with $yourop$.
 
-Using records instead of values results some more positive implications. First, there is no need to store the exchanger's state in it (by using 2 bits of it to mark the state), but we can rather have this info in the record. Second, if there is a \busy\ record in the exchanger, it contains the info of the two colliding records. Therefore, a third process, trying to also use the exchanger, can help the processes to complete the collision, and then can try and set the exchanger back to \emptyst, so it can use it again. In the original implementation, a process observaing a \busy\ exchanger, have to wait for the first process to read the value and release the exchanger. Therefore, if the first process crash after the collision, the exchanger will be hold by it forever. The helping mechanism avoids this scenario, making the exchange routine non-blocking.
+Using records instead of values, when using wisely, allows us to farther improve the algorithm. First, there is no need to store the exchanger's state in it (by using 2 bits of it to mark the state), but we can rather have this info in the record. Second, if there is a \busy\ record in the exchanger, it contains the info of the two colliding records. Therefore, a third process, trying to also use the exchanger, can help the processes to complete the collision, and then can try and set the exchanger back to \emptyst, so it can use it again. In the original implementation, a process observaing a \busy\ exchanger, have to wait for the first process to read the value and release the exchanger. Therefore, if the first process crash after the collision, the exchanger will be hold by it forever. The helping mechanism avoids this scenario, making the exchange routine non-blocking.
 
-Notice that no exchange record with \emptyst\ state is ever created, except for the $default$ record. Therefore, reading \emptyst\ state is equivalent to the exchanger storing a pointer to $default$. Every process creates new record when accessing the exchanger, with a unique address. As long as a process fails to perform a successful \CAS, and thus fails to store its pointer in $slot$, it is allowed to try again. However, once a process performs a successful \CAS\ and stores $myop$ in $slot$, the only other \CAS\ it is allowed to do are in order to try and store $defualt$ in $slot$. Thus, if no crash occurs, $myop$ can be written exactly once to $slot$. It follows that a collision can occur between two processes exactly - once a \waiting\ record stored in $slot$, only a single \CAS\ can replace it with a \busy\ record. As the two records can not be written again to $slot$, no other process can collide with any of the records.
+Notice that no exchange record with \emptyst\ state is ever created, except for the $default$ record. Therefore, reading \emptyst\ state is equivalent to the exchanger storing a pointer to $default$. A process $p$ creates a new record $myop$ when accessing the exchanger, with a unique address. As long as $p$ fails to perform a successful \CAS, and thus fails to store $myop$ in $slot$, it is allowed to try again. However, once a process performs a successful \CAS\ and stores $myop$ in $slot$, the only other \CAS\ it is allowed to do are in order to try and store $defualt$ in $slot$. Thus, $myop$ can be written exactly once to $slot$. It follows that a collision can occur between two processes exactly - once a \waiting\ record stored in $slot$, only a single \CAS\ can replace it with a \busy\ record. As the two records can not be written again to $slot$, no other process can collide with any of the records.
 
-Assume process $p$ crash along the \exchange\ routine. Upon recovery, in the \recoverExchange\, it first read $myop = Announce[pid]$. There are two scenarios to consider.
-If process $p$ crash while $myop.state = \busy$, then $p$ crashed while or after an attempt to collide with $myop.partner$. Notice that there was a point in time where $partner$ was stored in $slot$ with state \waiting, as these are the only values that can be written to $myop.partner$. if $p$ did not succeed to collide with $partner$, then $myop$ is never written to $slot$. In particular, no other process can read $myop$, or write to any of its fields. Thus, the if in lines \ref{exchange-rec-busy-if} and \ref{exchange-rec-result-if} do not hold, and $p$ will return \fail.
-Otherwise, $p$ performed a successful \CAS, replacing $partner$ with $myop$. The only way to write a new value to $slot$ is by a \CAS\ with $myop$ as a parameter. This in turns, happens only after a process reads $myop$, and since its status is \busy, a \switchPair\ routine is invoked with $myop$ and $partner$. Thus, either $p$ will read $myop$ from $slot$, or that $myop$ was replaced, but a \switchPair\ routine completed the collision, and $myop.result$ is updated. In both cases, $p$ will return $myop.result$ as required.
+The \recoverExchange\ routine relies on the following argument. If a process $p$ successfully wrote $op_p$ to $slot$ using the \CAS\ in line \ref{exchage-waiting-cas}, the only way to overwrite it by a different process $q$, is by a \CAS\ in line \ref{exchange-busy-cas} with a record $op_q$ such that its state is \busy, and $op_q.partner = op_p$. In addition, the only way to overwrite $op_q$ is by a \CAS\ replacing it with $default$, and this is done only after \switchPair$(op_p, op_q)$ is completed, and thus both $result$ fields are updated.
 
-Otherwise, $p$ crash while $myop.state = \waiting$. Thus, $p$ may be after trying to perform a \CAS\ to replace $defalut$ with $myop$.
+The correctness of the \recoverExchange\ routine is based on the above argument. There are few scenarios to consider.
+If $p$ crash after a successful \CAS\ in line \ref{exchage-waiting-cas}, then $op_p$ state is \waiting. Therefore, when reading $slot$ in the \recoverExchange\ one of the following must hold. If $slot$ contains $op_p$, then no process collide with $p$, and $p$ continue to run as if the time limit has been reached. Otherwise, there was a collision. From the above argument, it must be that either $op_q$ that collide with $op_p$ is stored in $slot$, in this case $op_q.partner = op_p$, and $p$ will try to complete the collision and release $slot$, or that $op_q$ has been overwritten, and in this case the $result$ field of $op_p$ is updated. In both cases, $p$ returns $op_p.result$.
+If $p$ crash after a successful \CAS\ in line \ref{exchange-busy-cas}, then $op_p$ state is \busy. It follows from the argument that the only way to overwrite $op_p$ is only after completing the collision by \switchPair. Thus, either upon recovery $p$ reads $op_p$ from $slot$, and in this case it tries to complete the the operation, or that $op_p.result$ was already updated. In both cases, $p$ returns it.
+If non of the above holds, then $op_p$ was not involved in any collision, because either no successful \CAS\ was done by $p$, or $p$ reached the time limit while no process show up, and was able to set $slot$ back to $defualt$. In any case, after the crash of $p$, $op_p$ will never be written again to $slot$, nor any other $op_q$ such that $op_q.partner = op_p$, as any such $op_q$ tries to perform \CAS$(op_p,op_q)$ that will fail. Also, as no process can collide with $op_p$, no \switchPair\ with $op_p$ as parameter is ever invoked, and in particular $op_p.result = \init$ for the rest of the execution. This in turn implies that upon recovery $p$ will return \fail, as required.
+
+
+
 
 
 \begin{figure*}[b]
@@ -119,7 +123,7 @@ Otherwise, $p$ crash while $myop.state = \waiting$. Thus, $p$ may be after tryin
 			\uCase{\emptyst} {
 				$myop.state$ := \waiting \tcp*{attempt to replace $default$}
 				$myop.partner := \init$ \;
-				\If (\tcp*[f]{try to collide}) {$slot.\CAS (yourop, myop)$} {
+				\If (\tcp*[f]{try to collide}) {$slot.\CAS (yourop, myop)$ \label{exchage-waiting-cas}} {
 					\While{getNanos() $< timeBound$}{
 						$yourop := slot$ \;
 						\uIf(\tcp*[f]{a collision was done}) {$yourop \neq myop$} {
@@ -148,7 +152,7 @@ Otherwise, $p$ crash while $myop.state = \waiting$. Thus, $p$ may be after tryin
 			\uCase (\tcp*[f]{some process is waiting in $slot$}){\waiting} {
 				$myop.partner := yourop$ \tcp*{attempt to replace $yourop$}
 				$myop.state := \busy$ \;
-				\uIf (\tcp*[f]{try to collide}){$slot.\CAS (yourop, myop)$} {
+				\uIf (\tcp*[f]{try to collide}){$slot.\CAS (yourop, myop)$ \label{exchange-busy-cas}} {
 					\switchPair $(myop, yourop)$ \tcp*{complete the collision}
 					$slot.\CAS (myop, default)$ \tcp*{release $slot$}
 					\KwRet $myop.result$ \;
